2014-06-12  ------ inet-2.4.0 released ------

2014-03-19  ------ inet-2.3.0 released ------

2014-03-14  Irene Rungeler

	sctp: added SCTP NAT support

2014-01-24  Zoltan Bojthe

	backport: msg files: legacy enum(Foo) syntax changed to @enum(Foo)

2013-05-10  Tamás Borbély

	backport: UDP: add option to specify the source address of the sent
	datagram

2013-09-20  Andras Varga

	ev->EV and related OMNeT++ 5.0 logging compatible fixes

2013-08-22  ------ inet-2.2.0 released ------

2013-07-25  Tamas Borbely

	UDP: implemented ReuseAddress option (it's like SO_REUSEADDR socket
	option in Linux)

	If ReuseAddress is set to true on two sockets, then they can bind to the
	same local address/port.

	E.g. the following works:

	      UDPSocket s1, s1;
	     ...
	     s1.setReuseAddress(true);
	     s1.bind(7777);
	     s2.setReuseAddress(true);
	     s2.bind(IPv4Address("10.0.0.1"), 7777);

	s2 will receive packets whose destination address is 10.0.0.1, s1 will
	receive all other packets

2013-07-17  Irene Ruengeler

	sctp: Added 8 new strategies for stream scheduling
	- new SCTP_C_SET_STREAM_PRIO code in SctpCommandCode
	- new SCTPSocket::setStreamPriority(stream, priority) method

2013-07-17  Irene Ruengeler

	sctp: Implemented SCTP Stream Reset (RFC 6525)
	- new SCTP_C_STREAM_RESET code in SctpCommandCode
	- new SCTP_I_SEND_STREAMS_RESETTED, SCTP_I_RCV_STREAMS_RESETTED,
	  SCTP_I_RESET_REQUEST_FAILED code in SctpStatusInd
	- SCTPSocket's listen, connect, conectx now have a streamReset parameter

2013-07-10  Irene Ruengeler

	sctp: Implemented Add-IP feature for SCTP (RFC 5061)
	- new SCTP_C_SEND_ASCONF code in SctpCommandCode
	- new SCTP_I_ADDRESS_ADDED code in SctpStatusInd

2013-07-03  Irene Ruengeler

	sctp: implementation of Partial Reliability SCTP (RFC 3758)
	- new SctpStatusInd: SCTP_I_ABANDONED
	- two new SCTPSocket::send methods to support Partial Reliability related parameters
	- SCTPSocket::connect and SCTPSocket::connectx has an additional