@@ -1,3 +1,7 @@
+2014-10-29  Thomas Dreibholz
+
+	tcp: added sendCommand API to the TCP socket
+
 2014-06-12  ------ inet-2.4.0 released ------
 
 2014-03-19  ------ inet-2.3.0 released ------
